--- a/style.css
+++ b/style.css
@@ -1,1 +1,129 @@
+@import url(https://fonts.googleapis.com/css?family=Raleway:300);
+@import url('https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap');
 
+body {
+    margin-top: 30px;
+    background-color: #af5a5a;
+    font-family: 'Courier Prime', monospace;
+    font-size: 0.8em;
+}
+
+section {
+    background: rgb(209, 208, 195);
+    border-radius: 15px;
+    border: 4px solid rgb(58, 57, 57);
+    padding:10px;
+    width: 350px;
+    height: 180px;
+    margin: auto;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.266);
+}
+
+ h1 {
+    display: flex;   
+    font-size: 0.8em;
+    text-align: left;
+    padding: 1px;
+}
+
+p {
+    font-family: 'Courier Prime', monospace;
+}
+
+img{
+    font-family: 'Courier Prime', monospace;
+    display: inline-block;
+    align-items: rigth;
+    padding:0px;
+    width: 200px;
+    height: 200px;
+    
+}
+
+button{
+   /* @include center;*/
+    background: #333333;
+    color: #ccc;
+    width: 80px;
+    height: 20px;
+    border: 0;
+    font-size: 10px;
+    border-radius: 6px;
+    font-family: 'Courier Prime', monospace;
+    transition: .6s;
+    overflow: hidden;
+    &:focus{
+      outline: 0;
+    }
+    
+    &:hover{
+      background: #c1cec1;
+      color: #000;
+      cursor: pointer;
+      &:before{
+        transform: translateX(300px)  skewX(-15deg);  
+        opacity: 0.6;
+        transition: .7s;
+      }
+      &:after{
+        transform: translateX(300px) skewX(-15deg);  
+        opacity: 1;
+        transition: .7s;
+      }
+    }
+}
+
+div.slides {
+    display: flexbox;
+    height: 300px;
+}
+
+.container {
+    display: flex;
+    align-items: center;
+}
+
+.slides {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    overflow: hidden;
+}
+
+.slides .slide {
+    width: 100%;
+    min-width:100%;
+    
+}
+
+.slides .slide img {
+    width: 100%;
+}
+
+.buttons {
+    display: flex;
+    justify-content: center;
+    margin: 30px;
+    gap: 16px;
+}
+
+.pagination {
+    display: flex;
+    margin: 16px;
+    gap: 8px;
+    justify-content: center;
+}
+
+.pagination .page {
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    overflow: hidden;
+    border: 1px #0e0505 solid;
+    cursor: pointer;
+    transition: all .3s;
+}
+
+.pagination .page.active {
+    background-color: #0a0808;
+}
